feat: Implement gym training functionality with energy management and stat updates
- Added gym.js to handle player training, including energy consumption and stat gain estimation.
- Created inventory.js to display user inventory items dynamically.
- Developed job.js for managing player jobs, including hiring, promoting, and leaving jobs.
- Introduced money.js for managing player finances, including adding, removing, and spending money.
- Enhanced utils.js with utility functions for user and player session management.
- Styled auth pages with auth-pages.css for consistent user experience.
- Designed city.css for shop and item display layout.
- Created gym.css for gym interface styling, including stat display and training controls.
- Developed inventory.css for inventory layout and item card styling.
- Styled topbar.css for consistent navigation across pages.
- Created HTML templates for player authentication (login, register, create player) and game pages (casino, city, gym, inventory, job, money, crimes).

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node backend/app.js",
+    "dev": "nodemon backend/app.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,10 +13,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.3",
+    "nodemon": "^3.1.7"
   }
 }
